[gd_scene load_steps=25 format=3 uid="uid://bryr8m263imcy"]

[ext_resource type="Script" path="res://script/toupie.gd" id="1_p4bqp"]
[ext_resource type="Texture2D" uid="uid://gp7uusjg46v2" path="res://images/center.png" id="3_4ew0m"]
[ext_resource type="PackedScene" uid="uid://dsb5q5i7h8n8h" path="res://maps/area_toupie_1.tscn" id="4_c7s2c"]
[ext_resource type="Texture2D" uid="uid://lasmfoubowa0" path="res://images/background1.png" id="4_s582p"]
[ext_resource type="PackedScene" uid="uid://c4tk818om7dw3" path="res://maps/area_toupie_2.tscn" id="5_h8hgh"]
[ext_resource type="PackedScene" uid="uid://c15mq64cs6bur" path="res://maps/area_arene.tscn" id="6_pfxmi"]
[ext_resource type="Script" path="res://script/label.gd" id="7_x0xyv"]
[ext_resource type="PackedScene" uid="uid://xm1lvc1bw580" path="res://maps/spawner.tscn" id="8_syc3h"]
[ext_resource type="Texture2D" uid="uid://3vkdnwgla3jx" path="res://images/animation/round_transition_animation.png" id="9_rdi58"]
[ext_resource type="FontFile" uid="uid://g165ow287dwf" path="res://font/Oswald-Regular.ttf" id="10_owgvq"]
[ext_resource type="PackedScene" uid="uid://b671ut7xj8sjb" path="res://maps/UI_joueur/inventaire.tscn" id="11_dmw5p"]
[ext_resource type="PackedScene" uid="uid://bluuefjjcnfh4" path="res://maps/UI_pause/pause.tscn" id="12_k4lh1"]

[sub_resource type="GDScript" id="GDScript_vlmrs"]
script/source = "extends Camera2D

# Référence au centre

func _ready():
	# Positionne la caméra au centre au départ
	self.position = Vector2(0, 0)  # Modifie cette valeur si nécessaire

func _process(delta):
	# La caméra reste au centre, peut être retiré si la caméra est fixe
	self.position = Vector2(0, 0)
"

[sub_resource type="AtlasTexture" id="AtlasTexture_24t1c"]
atlas = ExtResource("9_rdi58")
region = Rect2(0, 0, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhvm4"]
atlas = ExtResource("9_rdi58")
region = Rect2(400, 0, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gcxb"]
atlas = ExtResource("9_rdi58")
region = Rect2(0, 100, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ihq7"]
atlas = ExtResource("9_rdi58")
region = Rect2(400, 100, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_33d70"]
atlas = ExtResource("9_rdi58")
region = Rect2(0, 200, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a61u1"]
atlas = ExtResource("9_rdi58")
region = Rect2(400, 200, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_situ2"]
atlas = ExtResource("9_rdi58")
region = Rect2(0, 300, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahtm1"]
atlas = ExtResource("9_rdi58")
region = Rect2(400, 300, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne6at"]
atlas = ExtResource("9_rdi58")
region = Rect2(0, 400, 400, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7xua"]
atlas = ExtResource("9_rdi58")
region = Rect2(400, 400, 400, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_tnrt1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24t1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhvm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gcxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ihq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33d70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a61u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_situ2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahtm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne6at")
}, {
"duration": 80.0,
"texture": SubResource("AtlasTexture_m7xua")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Toupie" type="Node2D"]
script = ExtResource("1_p4bqp")

[node name="Area_arene" parent="." instance=ExtResource("6_pfxmi")]

[node name="Area_toupie1" parent="Area_arene" instance=ExtResource("4_c7s2c")]
position = Vector2(0, 150)
collision_mask = 63

[node name="Area_toupie2" parent="Area_arene" instance=ExtResource("5_h8hgh")]
position = Vector2(0, -150)
collision_mask = 63

[node name="centre" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(10, 10)
texture = ExtResource("3_4ew0m")

[node name="Background1" type="Sprite2D" parent="."]
show_behind_parent = true
texture_filter = 1
position = Vector2(2.07722e-05, 6.67572e-06)
scale = Vector2(23.04, 12.96)
texture = ExtResource("4_s582p")

[node name="Camera" type="Camera2D" parent="."]
limit_left = -576
limit_top = -324
limit_right = 576
limit_bottom = 324
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = SubResource("GDScript_vlmrs")

[node name="temps_affichage" type="Label" parent="."]
offset_left = 290.0
offset_top = -80.0
offset_right = 339.0
offset_bottom = -54.0
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0.698039, 0.905882, 0, 1)
text = "temps"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = -524.0
offset_right = -399.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(8.27849e-06, 0.744866, 0.915532, 1)
theme_override_font_sizes/font_size = 50
text = "FPS : "
script = ExtResource("7_x0xyv")
metadata/_edit_use_anchors_ = true

[node name="Spawner" parent="." instance=ExtResource("8_syc3h")]

[node name="transition_round" type="AnimatedSprite2D" parent="."]
top_level = true
texture_filter = 1
position = Vector2(-1.49997, 2.99997)
scale = Vector2(2.9175, 6.6)
sprite_frames = SubResource("SpriteFrames_tnrt1")
speed_scale = 2.0

[node name="score_tp1" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
top_level = true
texture_filter = 1
offset_left = 180.0
offset_top = -243.0
offset_right = 335.0
offset_bottom = -135.0
theme_override_fonts/font = ExtResource("10_owgvq")
theme_override_font_sizes/font_size = 60
text = "0
"
horizontal_alignment = 1

[node name="score_tp2" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
top_level = true
texture_filter = 1
offset_left = -350.0
offset_top = -243.0
offset_right = -195.0
offset_bottom = -135.0
theme_override_fonts/font = ExtResource("10_owgvq")
theme_override_font_sizes/font_size = 60
text = "0
"
horizontal_alignment = 1

[node name="inventaire" parent="." instance=ExtResource("11_dmw5p")]

[node name="pause" parent="." instance=ExtResource("12_k4lh1")]
visible = false

[connection signal="winner_round" from="Area_arene/Area_toupie1" to="." method="_on_area_toupie_1_winner_round"]
[connection signal="winner_round" from="Area_arene/Area_toupie2" to="." method="_on_area_toupie_2_winner_round"]
